# rokoko

./: .gitignore  CMakeLists.txt  Makefile  README.md  bench.sh  blog.md
blog/: 01-phase-1-pytorch-reference-setup.md  02-phase-2-weight-export.md  03-phase-3-1-cplusplus-scaffolding-plus-weight-loading.md  04-phase-3-2-albert-encoder-plus-cuda-kernels.md  05-phase-3-3-text-encoder.md  06-phase-3-4-prosody-predictor.md  07-phase-3-5-istftnet-decoder.md  08-phase-3-6-end-to-end-pipeline-plus-sinegen.md  09-phase-3-7-performance-optimization.md  10-phase-3-8-cudnn-elimination-plus-im2col.md  11-phase-3-9-kernel-fusion-and-the-gpu-pipeline-revelation.md  12-phase-4-cplusplus-phonemizer.md  13-phase-5-neural-g2p-replacing-the-rule-engine.md  14-phase-6-neural-g2p-in-cplusplus-and-end-to-end-tts.md  15-cmu-dict-conversion-phonological-rules.md  16-g2p-v2-swiglu-muon-and-more-data.md  17-g2p-v3-data-quality-crisis.md  18-g2p-v3-data-expansion-and-training-infrastructure.md  19-g2p-v3-token-batching-and-training-infrastructure.md  20-g2p-input-charset-normalization-and-data-cleanup.md  21-embedded-voice-pack-and-readme-overhaul.md  22-pronunciation-by-example-teacher.md  23-embedding-based-fitness-for-teacher.md  24-g2p-v3-training-run-and-production-readiness.md  25-g2p-v3-cplusplus-port-and-verification.md  26-cpu-only-tts-inference-with-optimized-avx2-gemm.md  27-multi-threaded-gemm-and-tiled-nt-1-3x-to-3-2x-real-time.md  28-g2p-v4-neural-text-normalization.md  29-v5plus-error-analysis-exact-match-is-misleading.md  30-v7-full-evaluation-plain-text-plus-normalization.md  32-rokoko-v2-plus-cuda-g2p-optimization.md  (+21 more)
(+23 files in other folders)
